test_regress/t/t_enum_recurse_bad.out
%Error: t/t_enum_recurse_bad.v:7:9: Recursive enum value: 'u'
    7 | enum {u=u} e_t;
      |         ^
%Error: t/t_enum_recurse_bad.v:7:9: Expecting expression to be constant, but enum value isn't const: 'u'
    7 | enum {u=u} e_t;
      |         ^
%Error: t/t_enum_recurse_bad.v:7:9: Enum value isn't a constant
    7 | enum {u=u} e_t;
      |         ^
%Error: Exiting due to
